# GCPShell

./: Makefile  index.html  main.py  pyproject.toml
_temp/: testserver.py
static/: index.html
