[tool.poetry]
name = "gcpshell"
version = "0.1.0"
description = "My GCP Shell Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here, e.g.,
# requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here, e.g.,
# pytest = "^7.2.0"

[[tool.poetry.packages]]
include = "app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
